--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
         run: nix develop --command make lint
 
       - name: Run tests
-        run: nix develop --command uv run pytest -n 4
+        run: nix develop --command uv run pytest -n 4 --tb=line --no-header --quiet
