--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,10 @@ ENV/
 env.bak/
 venv.bak/
 
+# Docker environment files
+.env.local
+.env.production
+
 # Spyder project settings
 .spyderproject
 .spyproject
