feat: add production support with Gunicorn and Docker configuration
- Introduced a new docker-compose.prod.yml for production deployment using Gunicorn.
- Updated docker-compose.yml to allow selection between Flask dev server and Gunicorn via environment variable.
- Added malla-web-gunicorn entry point script for running the application with Gunicorn.
- Enhanced README.md with instructions for production deployment using Gunicorn.
- Updated pyproject.toml to include Gunicorn as a dependency and added relevant scripts.
- Implemented WSGI application support in src/malla/wsgi.py for better production readiness.
- Added unit tests for the WSGI application to ensure proper functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
     image: ${MALLA_IMAGE:-ghcr.io/zenitram/malla:latest}
     # Uncomment the following line for local development:
     # build: .
+
+    # Choose between Flask dev server and Gunicorn
+    # Default: Flask development server (malla-web)
+    # Production: Gunicorn WSGI server (malla-web-gunicorn)
+    command: ${MALLA_WEB_COMMAND:-/app/.venv/bin/malla-web}
+
     ports:
       - "${MALLA_WEB_PORT:-5008}:5008"
     environment:
