--- a/env.example
+++ b/env.example
@@ -11,6 +11,11 @@
 # Port to expose the web UI on (default: 5008)
 # MALLA_WEB_PORT=5008
 
+# Web server command (choose between Flask dev server and Gunicorn)
+# Default: /app/.venv/bin/malla-web (Flask development server)
+# Production: /app/.venv/bin/malla-web-gunicorn (Gunicorn WSGI server)
+# MALLA_WEB_COMMAND=/app/.venv/bin/malla-web-gunicorn
+
 # =============================================================================
 # Application Configuration
 # =============================================================================
