Enhance decryption key handling to support multiple keys
Fixes #29

- Updated configuration to allow multiple comma-separated decryption keys for secondary channels.
- Modified the AppConfig class to include a method for parsing these keys.
- Adjusted the decryption logic to attempt decryption with each key in order until successful.
- Added unit tests to verify the functionality of multiple decryption keys and their parsing.

--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -41,5 +41,10 @@ debug: false
 # mqtt_topic_prefix: "msh"
 # mqtt_topic_suffix: "/+/+/+/#"
 
-# Default channel key used for decrypting secondary channels (base64)
+# Default channel key(s) used for decrypting secondary channels (base64)
+# Supports multiple comma-separated keys - each key will be tried in order
+# until one successfully decrypts the packet
+# Examples:
+#   Single key:    "1PG7OiApB1nwvP+rz05pAQ=="
+#   Multiple keys: "1PG7OiApB1nwvP+rz05pAQ==,AQ4GCAwQFBgcICQoLDA0ODw=,another+base64+key=="
 # default_channel_key: "1PG7OiApB1nwvP+rz05pAQ=="
