Add OpenTelemetry instrumentation and optional OTLP endpoint configuration to enable it

--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -51,3 +51,7 @@ debug: false
 
 # Number of hours after which to delete old data (0 = never delete)
 # data_retention_hours: 0
+
+# OpenTelemetry settings
+# Endpoint for sending traces (e.g. "http://localhost:4317")
+# otlp_endpoint: ""
