--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,14 @@ dependencies = [
     "types-protobuf>=6.30.2.20250516",
     "types-flask-cors>=6.0.0.20250520",
     "markdown>=3.6.0",
+    "opentelemetry-api>=1.24.0",
+    "opentelemetry-sdk>=1.24.0",
+    "opentelemetry-exporter-otlp>=1.24.0",
+    "opentelemetry-instrumentation-flask>=0.45b0",
+    "opentelemetry-instrumentation-sqlite3>=0.45b0",
+    "opentelemetry-instrumentation-logging>=0.45b0",
+    "opentelemetry-instrumentation-requests>=0.45b0",
+    "opentelemetry-instrumentation-system-metrics>=0.45b0",
 ]
 
 [project.urls]
